--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     // 允许编译javascript文件
     "allowJs": true,
     "sourceMap": true,
+    // 使用装饰器
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
