--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "el-plus-powerful-table": "^1.5.0",
     "element-plus": "^1.2.0-beta.3",
     "js-cookie": "^3.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.16",
-    "vue-i18n": "^8.26.7",
+    "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/json-schema": "^7.0.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
@@ -25,6 +28,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.1.1",
     "prettier": "^2.5.0",
+    "sass": "^1.43.5",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-svg-icons": "^1.0.5",
