--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VITE_BASE_URL = "http://localhost:3000/vite-vue-admin"
+VITE_BASE_URL = "http://localhost:3000/vite-vue-admin/"
 
-VITE_MOCK = TRUE
+VITE_MOCK = true
