--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "el-plus-powerful-table": "^1.5.0",
     "element-plus": "^1.2.0-beta.3",
     "js-cookie": "^3.0.1",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^3.2.16",
     "vue-i18n": "^9.1.6",
