feat: 增加app预览页&修改app-icon&增加顶部nav导航栏

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,6 @@
 /src/language/zh-and-en.ts
 /src/language/zh-TW.ts
+/src/views/**/locales/*.ts
+/src/components/**/locales/*.ts
+/src/utils/locales/*.ts
+/public/static/zh_CN.js
