--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "screenfull": "^6.0.0",
     "vue": "^3.2.16",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.12",
