--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,36 @@
 {
+  "include": ["src/*", "src/**/*.vue", "src/**/*.tsx", "src/**/*.jsx", "src/**/*.ts", "mock/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
-    // 编译输出的目标版本
-    "target": "es5",
-    "useDefineForClassFields": true,
-    // 采用的模块版本
-    "module": "esnext",
-    "moduleResolution": "node",
-    // 以严格模式解析
-    "strict": true,
-    // 在.tsx文件中支持jsx
-    "jsx": "preserve",
-    // 允许编译javascript文件
-    "allowJs": true,
-    "sourceMap": true,
-    // 使用装饰器
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "types": ["vite/client"],
     "paths": {
       "@/*": ["./src/*"]
     },
-    "outDir": "./"
-  },
-  "include": [
-    "src/*",
-    "src/**/*.vue",
-    "src/**/*.tsx",
-    "src/**/*.jsx",
-    "src/**/*.ts",
-    "mock/*"
-  ],
-  "exclude": ["node_modules"]
+    "outDir": "./",
+    // typeRoots option has been previously configured
+    // 以严格模式解析
+    "strict": true,
+    "strictPropertyInitialization": false,
+    // 在.tsx文件里支持JSX
+    "jsx": "preserve",
+    // 使用的JSX工厂函数
+    //   "jsxFactory": "h",
+    // 允许从没有设置默认导出的模块中默认导入
+    "allowSyntheticDefaultImports": true,
+    // 启用装饰器
+    "experimentalDecorators": true,
+    "strictFunctionTypes": false,
+    // 允许编译javascript文件
+    "allowJs": true,
+    // 采用的模块系统
+    "module": "esnext",
+    // 编译输出目标 ES 版本
+    "target": "es5",
+    // 在表达式和声明上有隐含的any类型时报错
+    "noImplicitAny": true,
+    "moduleResolution": "Node",
+    "lib": ["dom", "es5", "es6", "es2017", "es2015.promise"],
+    "sourceMap": true,
+    "pretty": true
+  }
 }
