--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "axios": "^0.24.0",
+    "echarts": "^5.2.2",
     "el-plus-powerful-table": "^1.5.0",
     "element-plus": "^1.2.0-beta.3",
     "js-cookie": "^3.0.1",
@@ -20,6 +21,7 @@
     "vue": "^3.2.16",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.12",
+    "vue3-number-roll-plus": "^0.1.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
