--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "echarts": "^5.2.2",
     "el-plus-powerful-table": "^1.5.0",
     "element-plus": "^1.2.0-beta.3",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
