--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vite-TSX-Vue-Admin",
+  "name": "vite-tsx-vue-admin",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "axios": "^0.24.0",
+    "dayjs": "^1.11.8",
     "echarts": "^5.2.2",
     "el-plus-powerful-table": "^1.5.0",
     "element-plus": "^1.2.0-beta.3",
